<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.paysera.currency.exchange.ui.viewmodel.CurrencyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/my_balances_lbl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/label_height_50"
            android:layout_margin="@dimen/label_margin_50"
            android:gravity="left"
            android:text="@string/label_my_balances"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="176dp"
            android:textColor="@color/design_default_color_on_secondary"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/list_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/label_height_80"
            android:paddingLeft="@dimen/label_padding_20"
            android:paddingRight="@dimen/label_padding_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_balances_lbl">


            <LinearLayout
                android:id="@+id/my_balance_account_layout"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/label_height_80"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/label_margin_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/currency_txt_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/label_height_40"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/label_currency_default"
                    android:textColor="@color/design_default_color_on_secondary" />

                <TextView
                    android:id="@+id/amount_txt_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/label_height_40"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/label_amount_default"
                    android:textColor="@color/design_default_color_on_secondary" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/my_balance_account_layout"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/currency_exchange_lbl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/label_height_50"
            android:gravity="start|center_vertical"
            android:paddingLeft="@dimen/label_padding_20"
            android:text="@string/label_currency_exchange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_layout"
            android:textColor="@color/design_default_color_on_secondary"/>

        <LinearLayout
            android:id="@+id/converter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currency_exchange_lbl">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/label_height_50"
                android:paddingLeft="@dimen/label_padding_20"
                android:paddingRight="@dimen/label_padding_20">

                <ImageView
                    android:id="@+id/sell_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/circle_button_red" />

                <TextView
                    android:id="@+id/sell_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/label_margin_20"
                    android:text="@string/label_sell"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/sell_image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/design_default_color_on_secondary"/>

                <EditText
                    android:id="@+id/sell_field"
                    android:layout_width="@dimen/label_width_100"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/label_margin_10"
                    android:ems="10"
                    android:gravity="end"
                    android:hint="@string/label_amount_default"
                    android:inputType="numberDecimal"
                    android:paddingRight="@dimen/label_padding_5"
                    android:maxLength="9"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/currency_lbl"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/design_default_color_on_secondary"/>

                <TextView
                    android:id="@+id/currency_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/label_margin_10"
                    android:text="@string/label_currency_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/drop_down_image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/design_default_color_on_secondary"/>

                <ImageView
                    android:id="@+id/drop_down_image"
                    android:layout_width="@dimen/label_width_16"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/arrow_down_float" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/design_default_color_primary" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/label_height_50"
                android:paddingLeft="@dimen/label_padding_20"
                android:paddingRight="@dimen/label_padding_20">

                <ImageView
                    android:id="@+id/receive_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/circle_button_green" />

                <TextView
                    android:id="@+id/receive_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/label_margin_20"
                    android:text="@string/label_receive"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/receive_image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/design_default_color_on_secondary"/>

                <TextView
                    android:id="@+id/receive_text"
                    android:layout_width="@dimen/label_width_100"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/label_margin_10"
                    android:gravity="end"
                    android:paddingRight="@dimen/label_padding_5"
                    android:text="@string/label_amount_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/currency_receive_lbl"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/lime_green"/>

                <TextView
                    android:id="@+id/currency_receive_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/label_margin_10"
                    android:text="@string/label_currency_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/drop_down_receive_image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/design_default_color_on_secondary"/>

                <ImageView
                    android:id="@+id/drop_down_receive_image"
                    android:layout_width="@dimen/label_width_16"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/arrow_down_float" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/label_height_1"
                android:background="@color/design_default_color_primary" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="@dimen/label_width_200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_margin_100"
            android:background="@drawable/submit_button"
            android:text="@string/label_submit"
            android:textColor="@color/design_default_color_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/converter_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
